<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ivbackground"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp" >

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Setter"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="player 1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp" >

            <TextView
                android:id="@+id/guesser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Guesser"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
             android:id="@+id/tvmultiWordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Word" />

        <EditText
            android:id="@+id/etMultiWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
             android:id="@+id/tvmultiWordHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hint" />

        <EditText     
            android:id="@+id/etMultiHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/bStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartGame"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WaitingForPlayer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>