<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ivbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/tvMultiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MultiplayerTitle"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvMultiName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16sp"
            android:text="@string/UserDevice" />

        <Button
            android:id="@+id/bRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/Refresh" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.80" />

    <ListView
        android:id="@+id/listhost"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_weight="0.80" >
    </ListView>

    <TextView
        android:id="@+id/tvHostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bCreateGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/HostGame" />
    </LinearLayout>

</LinearLayout>